# cpputils

./: .gitignore  CMakeLists.txt  build_debug.sh  build_release.sh
.github/workflows/: greetings.yml
cmake/: analyze.cmake  compiler_warnings.cmake  sanitizer.cmake
include/: errno.h  errnum.h  fatal.h  parent_exit.h
src/: errno.cpp  fatal.cpp  parent_exit.cpp
tests/: CMakeLists.txt
